--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@ label {
     padding-top: 20px;
 }
 	</style>
-	<title>Chill Chatbot</title>
+	<title>Call Center Chatbot</title>
 </head>
 <body>
     
