--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	<style>
+    <script src="libraries/p5.speech.js"></script>
+    <style>
 		#box {
     margin-top: 20px;
     border: solid #66becb 2px;
